added account delete functionality

--- a/Art_Gallery/templates/carousel.html
+++ b/Art_Gallery/templates/carousel.html
@@ -1,10 +1,9 @@
 {% extends "index.html" %}
 {% load i18n %}
-
 {% load static %}
 <!-- when you want to use images, use this jinja format to create a variable -->
 {% static "images" as baseUrl %}
-{% block carousel1_content %}
+{% block carousel_content %}
     <!-- owl carousel -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
