--- a/Art_Gallery/templates/changed_account_notice.html
+++ b/Art_Gallery/templates/changed_account_notice.html
@@ -18,7 +18,7 @@ English below 👇
 Hi {{name}}! 
 
 
-This message is to inform you that there was a change to your user account. 
+This message is to inform you that there was a change to your user account information. 
 If you did not make this change, please contact us at kaoruartgallery@gmail.com.
 
 
@@ -26,8 +26,6 @@ Enjoy browsing the art gallery!
 
 
 - Kaoru Crandall
-
-
 
 
 
