--- a/Art_Gallery/templates/checkout.html
+++ b/Art_Gallery/templates/checkout.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 {% load i18n %}
-
-{% block checkout %}
+{% load static %}
+{% block title %}{% translate 'チェックアウト' %}{% endblock %}
+{% block checkoutcontent %}
     CHECKOUT BUYYY
 {% endblock %}
